--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,7 +6,7 @@ permissions:
 on:
   workflow_dispatch: {}
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
     tags: [ '*' ]
 
 jobs:
