--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,4 +23,4 @@ jobs:
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: dist-pro
-          folder: index
+          folder: index.html
