--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -14,13 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v2
+      # - uses: actions/checkout@v3
+      # - uses: oven-sh/setup-bun@v2
       # - run: bun install
       # - run: bun run build
       # - run: zip -r dist/dist.zip dist/*
       # - run: md5sum dist/dist.zip | awk '{ print $1 }' > dist/ver
-      - uses: JamesIves/github-pages-deploy-action@v4
+      # - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: dist-pro
           folder: index.html
